--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@ theme: jeckyl-theme-slate
 
 <ol>
   <li>List item 1</li>
-  <li>List **item 2**</li>
+  <li>List <strong>item 2</strong></li>
   <li>List item 3</li>
 </ol>
   
